--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ EDCServer/EDCServer/obj/*
 EDCServer/EDCServer/bin/*
 EDCClient/cscope.out
 EDCClient/test.out
+EDCClient/show_screen
 
 TestClient/TestClient/bin/
 TestClient/TestClient/obj/
