--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ EDCServer/EDCServer/bin/*
 EDCClient/cscope.out
 EDCClient/test.out
 EDCClient/show_screen
+EDCClient/ptr_init
+EDCServer/EDCServer.v11.suo
+
 
 TestClient/TestClient/bin/
 TestClient/TestClient/obj/
