Modify: Change to formula name and put files in each directory Modify: Card_SN will pad to 8 chars with '0'

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 EDCServer/EDCServer/obj/*
 EDCServer/EDCServer/bin/*
 EDCClient/cscope.out
-EDCClient/test.out
+EDCClient/EDCClient
 EDCClient/show_screen
 EDCClient/ptr_init
 EDCServer/EDCServer.v11.suo
