Modify: Enhance stablilities of EDCAgent Modify: Add localtime to etc for correct UTC time

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 *.swp
-EDCServer/EDCServer/obj/*
-EDCServer/EDCServer/bin/*
 EDCClient/cscope.out
 EDCClient/EDCClient
 EDCClient/show_screen
 EDCClient/ptr_init
+EDCClient/EDC.tgz
+EDCClient/EDC/
+
 EDCServer/EDCServer.v11.suo
+EDCServer/EDCServer.suo
+EDCServer/EDCServer/obj/*
+EDCServer/EDCServer/bin/*
 
 
 TestClient/TestClient/bin/
